--- a/one.html
+++ b/one.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <h1>Hello</h1>
+    <form>
+      <input type="text" placeholder="enter your email" />
+      <input tepe="password" placeholder="enter your password" />
+      <input tepe="submit" value="log in" />
+    </form>
     <script src="script.js"></script>
   </body>
 </html>
